# csv_analyzer_api

./: .gitignore  APP_DESIGN.md  README.md  TODO.md
csv-analyzer-api/: Cargo.toml
csv-analyzer-api/migrations/: 0001_csv_requests_table.sql
csv-analyzer-api/src/: lib.rs  main.rs
csv-analyzer-api/src/db/: mod.rs  repository.rs
csv-analyzer-api/src/handlers/: csv.rs  errors.rs  health.rs  mod.rs  root.rs  utils.rs
csv-analyzer-api/src/models/: mod.rs  requests.rs  responses.rs
csv-analyzer-api/src/routers/: mod.rs  v1.rs
